--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sass": "^2.1.20",
     "gatsby-plugin-sharp": "^2.2.34",
+    "gatsby-remark-prismjs": "^3.3.22",
     "gatsby-source-filesystem": "^2.1.35",
-    "gatsby-transformer-remark": "^2.6.32",
+    "gatsby-transformer-remark": "^2.6.33",
     "gatsby-transformer-sharp": "^2.3.1",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.0",
+    "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
