--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.3.1",
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
+    "gatsby-plugin-algolia-search": "^0.5.6",
     "gatsby-plugin-catch-links": "^2.1.15",
     "gatsby-plugin-manifest": "^2.2.25",
     "gatsby-plugin-netlify-cms": "^4.1.31",
