--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "version": "0.1.0",
   "author": "Daniel Andrade <andrade.daniel111@gmail.com>",
   "dependencies": {
+    "algoliasearch": "^3.35.1",
     "bootstrap": "^4.3.1",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
+    "gatsby-plugin-algolia": "^0.5.0",
     "gatsby-plugin-catch-links": "^2.1.15",
     "gatsby-plugin-manifest": "^2.2.25",
     "gatsby-plugin-netlify-cms": "^4.1.31",
@@ -15,6 +18,7 @@
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sass": "^2.1.20",
     "gatsby-plugin-sharp": "^2.2.34",
+    "gatsby-plugin-styled-components": "^3.1.18",
     "gatsby-plugin-use-dark-mode": "^1.1.2",
     "gatsby-remark-prismjs": "^3.3.22",
     "gatsby-source-filesystem": "^2.1.35",
@@ -28,6 +32,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
+    "react-instantsearch-dom": "^6.3.0",
     "reactstrap": "^8.1.1",
     "styled-components": "^4.4.1",
     "use-dark-mode": "^2.3.1"
