--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "version": "0.1.0",
   "author": "Daniel Andrade <andrade.daniel111@gmail.com>",
   "dependencies": {
+    "@emotion/core": "^10.0.27",
+    "@emotion/styled": "^10.0.27",
     "algoliasearch": "^3.35.1",
+    "babel-plugin-polished": "^1.1.0",
     "bootstrap": "^4.3.1",
     "dotenv": "^8.2.0",
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-algolia": "^0.5.0",
     "gatsby-plugin-catch-links": "^2.1.15",
+    "gatsby-plugin-emotion": "^4.1.22",
     "gatsby-plugin-manifest": "^2.2.25",
     "gatsby-plugin-netlify-cms": "^4.1.31",
     "gatsby-plugin-offline": "^3.0.17",
+    "gatsby-plugin-polished": "^1.0.4",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sass": "^2.1.20",
     "gatsby-plugin-sharp": "^2.2.34",
@@ -27,6 +32,7 @@
     "lodash": "^4.17.15",
     "netlify-cms-app": "^2.9.7",
     "node-sass": "^4.13.0",
+    "polished": "^3.4.4",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
@@ -35,6 +41,7 @@
     "react-instantsearch-dom": "^6.3.0",
     "reactstrap": "^8.1.1",
     "styled-components": "^4.4.1",
+    "styled-icons": "^9.3.0",
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
